TL-19994 block_featured_links: Fixed title alignment in IE11

--- a/blocks/totara_featured_links/less/extra_styles.less
+++ b/blocks/totara_featured_links/less/extra_styles.less
@@ -32,6 +32,7 @@
         position: absolute;
 
         width: 100%;
+        left: 0;
         box-sizing: border-box;
         max-height: 100%;
 
